2009-12-27  Matevz Tadel  <matevz.tadel@ijs.si>

	* configure:
	* make/make_base.inc:
	Move -L${GLEDSYS}lib before LDFLAGS which might include other lib
	directiories.

2009-12-25  Matevz Tadel  <matevz.tadel@ijs.si>

	Changes for OSX build.

	* configure:
	Add sub deduce_libset_dirs to avoid invoking external find. OSX
	find is inferior to GNU find.
	Add LDFLAGS to link command for rnr-lib and remove LD_SURPLUS -
	this is not defined anywhere anymore.

	* make/make_base.inc:
	Add LDFLAGS to link command for base-lib and view-lib.

	* make/make_defs.inc:
	Capture root-ld-flags into ROOT_LDFLAGS, add them to LDFLAGS.

	When cleaning up dependencies use perl instead of sed. OSX sed is
	inferior to GNU sed.

	* make/make_targets.inc:
	Remove apostrophe in comment - it confuses xcode parser.

2009-11-27  Matevz Tadel  <matevz.tadel@ijs.si>

	* configure:
	Write out Makefile.config as soon as possible. Thus, even if
	configure dies, make distclean can still be called.

2009-11-27  Matevz Tadel  <matevz.tadel@ijs.si>

	* make/make_targets.inc:
	Proper dependencies between auto_dirs, catalog, glue and
	pre_depend targets.

2009-11-27  Matevz Tadel  <matevz.tadel@ijs.si>

	Allow configure to run make in parallel mode.

	* configure.rc:
	Add config variable MAKEJOPT, default "<auto>".

	* configure:
	In build system detection, if MAKEJOPT == <auto>, determine number
	of cores and use them all via "-j" when doing pre_depend and depend.

2009-11-27  Matevz Tadel  <matevz.tadel@ijs.si>

	* libexec/project7.pl:
	In auto-generated set-link method with L{f} do not apply the check
	if argument is null.

2009-11-21  Matevz Tadel  <matevz.tadel@ijs.si>

	* libexec/project7.pl:
	Make assert_linkname return the pointer the lens pointed
	to (auto-generated via L{a} pragma).

2009-11-10  Matevz Tadel  <matevz.tadel@ijs.si>

	Add support for L{fF}, relax regexp for weed ctor parsing.

	* libexec/project7.pl:
	L{fF} does an additional check in SetLink() method by using