@@ -8,13 +8,15 @@ my $def_cfg = "$ENV{GLEDSYS}/cfg/gled-generate-htmldoc.rc";
 my $cfg_parser = new ParseConfig(-defcfg=>$def_cfg);
 $cfg_parser->parse();
 
+my $index_gled = "$OUTDIR/index-gled.html";
+
 Gled_ConfCat_Parser::import_build_config();
 
 chdir $ENV{GLEDSYS};
 
 `mkdir -p $OUTDIR`;
 
-open HTML, ">$OUTDIR/index.html";
+open HTML, ">$index_gled";
 print HTML <<"fnord";
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
 "http://www.w3.org/TR/html4/loose.dtd">
@@ -71,59 +73,79 @@ list of common typedefs
 fnord
 
 open S, ">$MKDOC_MACRO";
-print S "{\n";
 
-# for $ls (@{$resolver->{LibSetList}}) {
-#   print S "  Gled::theOne->AssertLibSet(\"$ls\");\n";
-# }
+$lsets = join(':', map { "libsets/$_" } @{$resolver->{LibSetList}});
 
-print S "  gSystem->IgnoreSignal(kSigSegmentationViolation, true);\n";
-print S "  if(gROOT->LoadMacro(\"macros/gled_html_doc.C++\")) gSystem->Exit(1);\n\n";
+$load_lsets = join("\n  ", map { "Gled::theOne->AssertLibSet(\"$_\");" } @{$resolver->{LibSetList}});
 
-print S "  gEnv->SetValue(\"Root.Html.Header\", \"\");\n";
-print S "  gEnv->SetValue(\"Root.Html.Footer\", \"\");\n";
-print S "  gEnv->SetValue(\"Root.Html.HomePage\", \"http://www.gled.org/\");\n";
+print S <<"FNORD";
+{
+  gSystem->IgnoreSignal(kSigSegmentationViolation, true);
+  if(gROOT->LoadMacro(\"macros/gled_html_doc.C++\")) gSystem->Exit(1);
 
-print S "  ZHtml html;\n";
-print S "  html->SetOutputDir(\"$OUTDIR\");\n";
-print S "  html->SetSourceDir(\"" .
-  join(':', @{$resolver->{LibSetList}}) . "\");\n";
+  $load_lsets;
+
+  gEnv->SetValue("Root.Html.Header", "");
+  gEnv->SetValue("Root.Html.Footer", "");
+  gEnv->SetValue("Root.Html.HomePage", "http://www.gled.org/");
+
+  ZHtml html;
+  html.SetProductName("Gled");
+  html.SetOutputDir("$OUTDIR");
+  html.SetInputDir("$lsets");
+
+  ZModDef moddef;
+FNORD
 
 @all_classes = ();
 
-for $ls (@{$resolver->{LibSetList}}) {
-  # print S "  Gled::theOne->AssertLibSet(\"$ls\");\n";
-  print S "  gSystem->Load(\"$ENV{GLEDSYS}/lib/lib${ls}\");\n";
+for $ls (@{$resolver->{LibSetList}})
+{
+  print S <<"FNORD";
+  // Gled::theOne->AssertLibSet("$ls");
+  moddef.fModule = "$ls";
+  html.SetModuleDefinition(moddef);
+  // html.SetInputDir("libsets/$ls");
+FNORD
 
-  print HTML "\n\n<hr>\n";
+  print HTML "\n\n<hr><hr>\n";
   print HTML "<h3><code>$ls</code></h3>\n\n";
 
   my $ds = `cd $ls; make echo_dict_dirs`;
   chomp $ds;
   my @dirs = split(/\s+/, $ds);
 
-  for $d (@dirs) {
+  for $d (@dirs)
+  {
     my @classes;
+
     open C, "find $ls/$d -name \\*.h | xargs grep -h ClassDef |";
-
-    # !!!! Should sort glasses by ClassID and others alphabetically !!!!
-
-    while($_ = <C>) {
+    while ($_ = <C>)
+    {
       chomp;
-      my $cnt = m/ClassDef\(([\w:]+)\s*,\s*(\d+)\)/;
+      my $cnt = m/ClassDef(?:NV)?\(([\w:<>]+)\s*,\s*(\d+)\)/;
       # !!!! Several classes per header file SOMEWHAT supported !!!!
-      unless($cnt) {
+      unless ($cnt)
+      {
 	print "SAFR: $_\n";
 	next;
       }
       push @classes, $1;
-      print S "  printf(\"Generating for class $1\\n\");\n";
-#      print S "  html->MakeClass(\"$1\", false);\n";
-      print S "  html->KusKus(\"$1\");\n";
-      print S "  printf(\"Done for class $1\\n\");\n";
     }
     close C;
-    if($#classes >= 0) {
+
+    @classes = sort @classes;
+
+    for $cls (@classes)
+    {
+      print S "  printf(\"Generating for class $cls\\n\");\n";
+      # print S "  html->MakeClass(\"$cls\", false);\n";
+      print S "  html->KusKus(\"$cls\");\n";
+      print S "  printf(\"Done for class $cls\\n\");\n";
+    }
+
+    if ($#classes >= 0)
+    {
       print HTML "<h4><code>$d</code></h4>\n\n";
       print HTML join(", ",
         map { 
@@ -144,7 +166,8 @@ push @all_classes, "TObject";
 $num_all_classes = $#all_classes + 1;
 print S "  char* names[$num_all_classes];\n";
 my $i = 0;
-for $c (@all_classes) {
+for $c (@all_classes)
+{
   print S "  names[$i] = \"$c\";\n";
   ++$i;
 }
@@ -156,9 +179,9 @@ print S "}\n";
 close S;
 
 print HTML "</div>\n</body>\n</html>\n";
-`chmod a+x $OUTDIR/index.html`;
+`chmod a+x $index_gled`;
 
-system "root -l $MKDOC_MACRO";
+system "gled $MKDOC_MACRO";
 #`rm $MKDOC_MACRO`;
 
 print '*' x 80 . "\n";
